# Lab-2-OS

./: README.md
Lab2os/: CMakeLists.txt  CMakePresets.json  Main.cpp  tests.cpp  thread_functions.cpp  thread_functions.h
